--- a/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
+++ b/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dJI-V1-Dze">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -46,7 +47,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgV-yP-qXV">
-                                                    <rect key="frame" x="15" y="155" width="37" height="21"/>
+                                                    <rect key="frame" x="15" y="156" width="37" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="9qb-cs-eGU">
                                                             <variation key="heightClass=regular-widthClass=regular" constant="21"/>
@@ -56,21 +57,21 @@
                                                     <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                     <variation key="heightClass=regular-widthClass=regular">
-                                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="25"/>
+                                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="21"/>
                                                     </variation>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bS-XT-YZL">
-                                                    <rect key="frame" x="263" y="155" width="42" height="23"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bS-XT-YZL">
+                                                    <rect key="frame" x="263" y="156" width="42" height="23"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="mTG-ao-v4v">
-                                                            <variation key="heightClass=regular-widthClass=regular" constant="21"/>
+                                                        <constraint firstAttribute="height" constant="23" id="mTG-ao-v4v">
+                                                            <variation key="heightClass=regular-widthClass=regular" constant="23"/>
                                                         </constraint>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                                     <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                     <variation key="heightClass=regular-widthClass=regular">
-                                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="25"/>
+                                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                                     </variation>
                                                 </label>
                                             </subviews>
@@ -81,13 +82,15 @@
                                                 <constraint firstItem="6qT-Um-NVh" firstAttribute="leading" secondItem="tgQ-mW-bQB" secondAttribute="leadingMargin" id="ByY-4g-iYH"/>
                                                 <constraint firstAttribute="trailing" secondItem="8bS-XT-YZL" secondAttribute="trailing" constant="15" id="HB4-ib-qsg"/>
                                                 <constraint firstItem="8bS-XT-YZL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dgV-yP-qXV" secondAttribute="trailing" constant="8" symbolic="YES" id="JpM-Rg-oWv"/>
-                                                <constraint firstItem="dgV-yP-qXV" firstAttribute="top" secondItem="XRD-or-ksy" secondAttribute="bottom" constant="134" id="PS0-QF-yrQ">
-                                                    <variation key="heightClass=regular-widthClass=regular" constant="134"/>
+                                                <constraint firstItem="6qT-Um-NVh" firstAttribute="trailing" secondItem="tgQ-mW-bQB" secondAttribute="trailingMargin" id="Ogj-9n-P9s"/>
+                                                <constraint firstItem="dgV-yP-qXV" firstAttribute="top" secondItem="XRD-or-ksy" secondAttribute="bottom" constant="135" id="PS0-QF-yrQ">
+                                                    <variation key="heightClass=regular-widthClass=regular" constant="135"/>
                                                 </constraint>
                                                 <constraint firstItem="6qT-Um-NVh" firstAttribute="top" secondItem="XRD-or-ksy" secondAttribute="bottom" constant="4" id="RaO-Td-2xD"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="6qT-Um-NVh" secondAttribute="bottom" constant="8" id="RoK-Ig-sNz"/>
-                                                <constraint firstItem="8bS-XT-YZL" firstAttribute="top" secondItem="tgQ-mW-bQB" secondAttribute="top" constant="155" id="V8K-tY-D57">
-                                                    <variation key="heightClass=regular-widthClass=regular" constant="155"/>
+                                                <constraint firstItem="6qT-Um-NVh" firstAttribute="leading" secondItem="tgQ-mW-bQB" secondAttribute="leadingMargin" id="Tmv-NO-Njc"/>
+                                                <constraint firstItem="8bS-XT-YZL" firstAttribute="top" secondItem="tgQ-mW-bQB" secondAttribute="top" constant="156" id="V8K-tY-D57">
+                                                    <variation key="heightClass=regular-widthClass=regular" constant="156"/>
                                                 </constraint>
                                                 <constraint firstItem="6qT-Um-NVh" firstAttribute="trailing" secondItem="tgQ-mW-bQB" secondAttribute="trailingMargin" id="mQY-BS-vje"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XRD-or-ksy" secondAttribute="trailing" constant="20" symbolic="YES" id="ouB-20-kKa"/>
@@ -106,8 +109,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LCh-GM-jcn" userLabel="View Header">
                                 <rect key="frame" x="0.0" y="20" width="320" height="145"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="alura viagens" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Obl-36-UvI">
-                                        <rect key="frame" x="107.5" y="8.5" width="105.5" height="23.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App de  viagens" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Obl-36-UvI">
+                                        <rect key="frame" x="94.5" y="8.5" width="131" height="23.5"/>
                                         <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -241,6 +244,74 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="130.40000000000001" y="115.59220389805098"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1qH-Mg-cJ0">
+            <objects>
+                <viewController id="dJI-V1-Dze" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kyi-MD-cPk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IgS-Ue-8NP">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pacotes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2f-LW-8tf">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nn3-uc-XsB">
+                                        <rect key="frame" x="0.0" y="20.5" width="320" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="n9Y-cz-0Bt"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6 pacotes encontrados" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHo-wl-4W3">
+                                        <rect key="frame" x="0.0" y="50.5" width="320" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NcS-dS-8AS">
+                                        <rect key="frame" x="0.0" y="71" width="320" height="477"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0GT-Ie-vPy">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bH7-Sz-69o">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="eKz-AX-p3m">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="IgS-Ue-8NP" firstAttribute="trailing" secondItem="7mn-68-iDn" secondAttribute="trailing" id="2dT-3s-4I3"/>
+                            <constraint firstItem="IgS-Ue-8NP" firstAttribute="top" secondItem="7mn-68-iDn" secondAttribute="top" constant="20" id="G0W-jb-lnI"/>
+                            <constraint firstItem="IgS-Ue-8NP" firstAttribute="bottom" secondItem="7mn-68-iDn" secondAttribute="bottom" id="i7v-7A-fmT"/>
+                            <constraint firstItem="IgS-Ue-8NP" firstAttribute="leading" secondItem="7mn-68-iDn" secondAttribute="leading" id="p43-ph-v8u"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7mn-68-iDn"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mJg-mb-YJf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="888.75" y="115.14084507042254"/>
         </scene>
     </scenes>
 </document>
